@@ -3033,7 +3033,7 @@ workbook_create_standard_toolbar (WorkbookControlGUI *wbcg)
 
 	behavior = GNOME_DOCK_ITEM_BEH_NORMAL;
 
-	if (!gnome_preferences_get_menubar_detachable ())
+	if (!gnome_preferences_get_toolbar_detachable ())
 		behavior |= GNOME_DOCK_ITEM_BEH_LOCKED;
 	gnome_app_add_toolbar (
 		GNOME_APP (wbcg->toplevel),
